# kubernetesimal

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  CODEOWNERS  Dockerfile  Gopkg.toml  LICENSE  Makefile  PROJECT  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  main.go  workspace_status.sh
.github/: dependabot.yaml
.github/workflows/: build.yaml  main.yaml  post-dependabot.yaml  test.yaml
api/v1alpha1/: BUILD.bazel  etcd_types.go  etcd_webhook.go  etcdnode_types.go  etcdnodedeployment_types.go  etcdnodeset_types.go  groupversion_info.go  kubernetesimalconfig_types.go  webhook_suite_test.go  zz_generated.deepcopy.go
api/v1alpha1/testdata/config/: webhook
api/v1alpha1/testdata/config/crd/: bases
cmd/manager/: main.go
config/crd/: kustomization.yaml
config/crd/bases/: kubernetesimal.kkohtaka.org_etcdnodedeployments.yaml  kubernetesimal.kkohtaka.org_etcdnodes.yaml  kubernetesimal.kkohtaka.org_etcdnodesets.yaml  kubernetesimal.kkohtaka.org_etcds.yaml  kubernetesimal.kkohtaka.org_kubernetesimalconfigs.yaml
config/crd/patches/: cainjection_in_etcdnodedeployments.yaml  cainjection_in_etcdnodes.yaml  cainjection_in_etcdnodesets.yaml  cainjection_in_etcds.yaml  cainjection_in_kubernetesimalconfigs.yaml  webhook_in_etcdnodedeployments.yaml  webhook_in_etcdnodes.yaml  webhook_in_etcdnodesets.yaml  webhook_in_etcds.yaml  webhook_in_kubernetesimalconfigs.yaml
config/crds/: github_v1alpha1_repository.yaml  packet_v1alpha1_packetdevice.yaml  services_v1alpha1_matchbox.yaml
config/default/: kustomization.yaml
config/manager/: controller_manager_config.yaml  kustomization.yaml
config/rbac/: etcd_editor_role.yaml  etcd_viewer_role.yaml  etcdnode_editor_role.yaml  etcdnode_viewer_role.yaml  etcdnodedeployment_editor_role.yaml  etcdnodedeployment_viewer_role.yaml  etcdnodeset_editor_role.yaml  etcdnodeset_viewer_role.yaml  kubernetesimalconfig_editor_role.yaml  kubernetesimalconfig_viewer_role.yaml  rbac_role.yaml  role.yaml
config/samples/: github_v1alpha1_repository.yaml  kubernetesimal_v1alpha1_etcd.yaml  kubernetesimal_v1alpha1_etcdnode.yaml  kubernetesimal_v1alpha1_etcdnodedeployment.yaml  kubernetesimal_v1alpha1_etcdnodeset.yaml  packet-secret.yaml.sample  packet_v1alpha1_packetdevice.yaml  services_v1alpha1_matchbox.yaml
config/webhook/: manifests.yaml
controller/errors/: BUILD.bazel  requeue_error.go  requeue_error_test.go
controller/expectations/: BUILD.bazel  expectations.go  util.go
controller/finalizer/: BUILD.bazel  finalizer.go
controllers/: BUILD.bazel  cloud-config  cloud-config.tmpl  errors.go  errors_test.go  etcd.go  etcd_controller.go  etcd_prober.go  etcdnode.go  etcdnode_controller.go  etcdnode_prober.go  expectations.go  finalizer.go  pki.go  ssh.go  status.go  suite_test.go  util.go  vm.go
controllers/etcd/: BUILD.bazel  endpointslice.go  etcd.go  etcdnode.go  etcdnodedeployment.go  pki.go  prober.go  reconciler.go  service.go  ssh.go
controllers/etcdnode/: BUILD.bazel  etcd.go  prober.go  reconciler.go  service.go  vm.go  vmi.go
controllers/etcdnode/templates/: cloud-init.tmpl  join-cluster.sh.tmpl  leave-cluster.sh.tmpl  start-cluster.sh.tmpl  start-etcd.sh.tmpl
controllers/etcdnodedeployment/: BUILD.bazel  etcdnodedeployment.go  etcdnodeset.go  reconciler.go
controllers/etcdnodeset/: BUILD.bazel  etcdnode.go  etcdnodeset.go  reconciler.go
controllers/templates/: cloud-init.tmpl  start-etcd.sh.tmpl
hack/: boilerplate.go.txt  embedtexts.go
hash/: BUILD.bazel  hash.go
k8s/: BUILD.bazel  object.go  secret.go  vmi.go
k8s/endpointslice/: BUILD.bazel  endpointslice.go
k8s/etcdnode/: BUILD.bazel  etcdnode.go
k8s/etcdnodedeployment/: BUILD.bazel  etcdnodedeployment.go
k8s/etcdnodeset/: BUILD.bazel  etcdnodeset.go
k8s/object/: BUILD.bazel  object.go
k8s/secret/: BUILD.bazel  secret.go
k8s/service/: BUILD.bazel  service.go
k8s/vmi/: BUILD.bazel  vmi.go
net/http/: BUILD.bazel  prober.go
observability/tracing/: BUILD.bazel  tracing.go
observerbility/tracing/: BUILD.bazel  tracing.go
pkg/apis/: addtoscheme_github_v1alpha1.go  addtoscheme_packet_v1alpha1.go  addtoscheme_services_v1alpha1.go
pkg/apis/github/: group.go  register.go
pkg/apis/github/v1alpha1/: doc.go  register.go  repository_types.go  repository_types_test.go  types.go  zz_generated.deepcopy.go
pkg/apis/packet/: group.go
pkg/apis/packet/v1alpha1/: doc.go  packetdevice_types.go  packetdevice_types_test.go  register.go  zz_generated.deepcopy.go
pkg/apis/services/: group.go
pkg/apis/services/v1alpha1/: doc.go  matchbox_types.go  matchbox_types_test.go  register.go  zz_generated.deepcopy.go
pkg/client/clientset/versioned/: clientset.go
pkg/client/clientset/versioned/fake/: clientset_generated.go  register.go
pkg/client/clientset/versioned/scheme/: register.go
pkg/client/clientset/versioned/typed/github/v1alpha1/: github_client.go  repository.go
pkg/client/informers/externalversions/: factory.go  generic.go
pkg/client/informers/externalversions/github/: interface.go
pkg/client/informers/externalversions/github/v1alpha1/: interface.go  repository.go
pkg/client/informers/externalversions/internalinterfaces/: factory_interfaces.go
pkg/client/listers/github/v1alpha1/: repository.go
pkg/controller/: add_matchbox.go  add_packetdevice.go  add_repository.go
pkg/controller/github/: repositorycontroller.go
pkg/controller/matchbox/: ignition.go  matchbox_controller.go  matchbox_controller_suite_test.go  matchbox_controller_test.go  zz_generated.templates.go
pkg/controller/matchbox/templates/: matchbox.service
pkg/controller/packetdevice/: packetdevice_controller.go  packetdevice_controller_suite_test.go  packetdevice_controller_test.go
pkg/controller/repository/: repository_controller.go  repository_controller_suite_test.go  repository_controller_test.go
pkg/util/: finalizer.go  meta.go
pkg/util/crypto/: crypto.go
pkg/util/pki/: ca.go  ca_test.go  certificate.go  certificate_test.go  defaults.go
pki/: BUILD.bazel  ca.go
ssh/: BUILD.bazel  keypair.go  session.go
(+2 files in other folders)
