load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/kkohtaka/kubernetesimal
gazelle(name = "gazelle")

go_library(
    name = "kubernetesimal_lib",
    srcs = ["main.go"],
    importpath = "github.com/kkohtaka/kubernetesimal",
    visibility = ["//visibility:private"],
    deps = [
        "//api/v1alpha1",
        "//controllers",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/util/runtime",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_client_go//plugin/pkg/client/auth",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/healthz",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
    ],
)

go_binary(
    name = "kubernetesimal",
    embed = [":kubernetesimal_lib"],
    visibility = ["//visibility:public"],
)
