load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

# gazelle:prefix github.com/kkohtaka/kubernetesimal
gazelle(name = "gazelle")

go_library(
    name = "kubernetesimal_lib",
    srcs = ["main.go"],
    importpath = "github.com/kkohtaka/kubernetesimal",
    visibility = ["//visibility:private"],
    deps = [
        "//api/v1alpha1",
        "//controllers",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/util/runtime",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_client_go//plugin/pkg/client/auth",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/healthz",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
    ],
)

container_image(
    name = "nonroot_image",
    user = "nonroot",
    visibility = ["//visibility:public"],
)

go_image(
    name = "kubernetesimal",
    base = ":nonroot_image",
    embed = [":kubernetesimal_lib"],
    visibility = ["//visibility:public"],
)

container_push(
    name = "push_kubernetesimal",
    format = "Docker",
    image = ":kubernetesimal",
    registry = "docker.pkg.github.com",
    repository = "kkohtaka/kubernetesimal/kubernetesimal",
    tag = "latest",
)
