load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "controllers",
    srcs = [
        "errors.go",
        "etcd.go",
        "etcd_controller.go",
        "etcdnode.go",
        "etcdnode_controller.go",
        "expectations.go",
        "finalizer.go",
        "pki.go",
        "ssh.go",
        "vm.go",
    ],
    embedsrcs = [
        "templates/cloud-init.tmpl",
        "templates/start-etcd.sh.tmpl",
    ],
    importpath = "github.com/kkohtaka/kubernetesimal/controllers",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha1",
        "//k8s/object",
        "//k8s/secret",
        "//k8s/service",
        "//k8s/vmi",
        "//net/http",
        "//observability/tracing",
        "//pki",
        "//ssh",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/api/equality",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_apimachinery//pkg/util/sets",
        "@io_k8s_client_go//tools/cache",
        "@io_k8s_klog_v2//:klog",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/controller/controllerutil",
        "@io_k8s_sigs_controller_runtime//pkg/log",
        "@io_k8s_utils//clock",
        "@io_kubevirt_api//core/v1:core",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)

go_test(
    name = "controllers_test",
    srcs = [
        "errors_test.go",
        "suite_test.go",
    ],
    embed = [":controllers"],
    deps = [
        "//api/v1alpha1",
        "@com_github_onsi_ginkgo//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@com_github_stretchr_testify//assert",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/envtest",
        "@io_k8s_sigs_controller_runtime//pkg/envtest/printer",
        "@io_k8s_sigs_controller_runtime//pkg/log",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
    ],
)
