load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "v1alpha1",
    srcs = [
        "etcd_types.go",
        "etcd_webhook.go",
        "groupversion_info.go",
        "kubernetesimalconfig_types.go",
        "zz_generated.deepcopy.go",
    ],
    importpath = "github.com/kkohtaka/kubernetesimal/api/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_blang_semver_v4//:semver",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_apimachinery//pkg/util/validation/field",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/config/v1alpha1",
        "@io_k8s_sigs_controller_runtime//pkg/log",
        "@io_k8s_sigs_controller_runtime//pkg/scheme",
        "@io_k8s_sigs_controller_runtime//pkg/webhook",
    ],
)

go_test(
    name = "v1alpha1_test",
    srcs = ["webhook_suite_test.go"],
    embed = [":v1alpha1"],
    deps = [
        "@com_github_onsi_ginkgo//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@io_k8s_api//admission/v1beta1",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/envtest",
        "@io_k8s_sigs_controller_runtime//pkg/envtest/printer",
        "@io_k8s_sigs_controller_runtime//pkg/log",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
    ],
)
