load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "etcdnode",
    srcs = [
        "etcd.go",
        "prober.go",
        "reconciler.go",
        "service.go",
        "vmi.go",
    ],
    embedsrcs = [
        "templates/cloud-init.tmpl",
        "templates/join-cluster.sh.tmpl",
        "templates/start-cluster.sh.tmpl",
        "templates/leave-cluster.sh.tmpl",
    ],
    importpath = "github.com/kkohtaka/kubernetesimal/controllers/etcdnode",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha1",
        "//controller/errors",
        "//controller/finalizer",
        "//k8s/object",
        "//k8s/secret",
        "//k8s/service",
        "//k8s/vmi",
        "//net/http",
        "//observability/tracing",
        "//ssh",
        "@com_github_masterminds_sprig_v3//:sprig",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/api/equality",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_apimachinery//pkg/util/intstr",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/builder",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/log",
        "@io_k8s_sigs_controller_runtime//pkg/predicate",
        "@io_kubevirt_api//core/v1:core",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
