load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "etcdnodeset",
    srcs = [
        "etcdnode.go",
        "etcdnodeset.go",
        "reconciler.go",
    ],
    importpath = "github.com/kkohtaka/kubernetesimal/controllers/etcdnodeset",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha1",
        "//controller/errors",
        "//controller/expectations",
        "//k8s/etcdnode",
        "//k8s/object",
        "//observability/tracing",
        "@io_k8s_apimachinery//pkg/api/equality",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/labels",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/builder",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/event",
        "@io_k8s_sigs_controller_runtime//pkg/log",
        "@io_k8s_sigs_controller_runtime//pkg/predicate",
        "@io_kubevirt_api//core/v1:core",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
