load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "etcdnode",
    srcs = ["etcdnode.go"],
    importpath = "github.com/kkohtaka/kubernetesimal/k8s/etcdnode",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha1",
        "//k8s/object",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/log",
    ],
)
