load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "etcdnodedeployment",
    srcs = ["etcdnodedeployment.go"],
    importpath = "github.com/kkohtaka/kubernetesimal/k8s/etcdnodedeployment",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha1",
        "//k8s/object",
        "//observability/tracing",
        "@io_k8s_apimachinery//pkg/api/equality",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/controller/controllerutil",
        "@io_k8s_sigs_controller_runtime//pkg/log",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
