load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "object",
    srcs = ["object.go"],
    importpath = "github.com/kkohtaka/kubernetesimal/k8s/object",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_apimachinery//pkg/api/meta",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
    ],
)
